--- a/students.html
+++ b/students.html
@@ -9,16 +9,16 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
-      window.localAssets = true;
+      window.localAssets = false;
     </script>
-    <script src="js/init.min.js"></script>
+    <script src="http://static.nkwalton.com/js/init.min.js"></script>
   </head>
   <body class="teaching">
     <header class="main">
@@ -65,7 +65,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster1.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -85,7 +85,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster2.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -105,7 +105,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster3.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -125,7 +125,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster4.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -145,7 +145,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster5.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -165,7 +165,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster7.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -185,7 +185,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster6.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -205,7 +205,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster8.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -225,7 +225,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster9.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -261,7 +261,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd1.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -281,7 +281,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd2.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -301,7 +301,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd3.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -321,7 +321,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd4.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -341,7 +341,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd5.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -361,7 +361,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd6.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -381,7 +381,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd7.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -401,7 +401,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd8.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -421,7 +421,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd9.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -457,7 +457,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album1.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -477,7 +477,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album2.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -497,7 +497,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album3.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -517,7 +517,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album4.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -537,7 +537,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album5.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -557,7 +557,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album6.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -593,7 +593,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop1.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -613,7 +613,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop2.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -633,7 +633,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop4.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -653,7 +653,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop3.jpg"/></noscript>
+              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
