Make home page more responsive

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
+    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=4"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
       window.localAssets = false;
+      window.jsVersion   = 1;
     </script>
-    <script src="http://static.nkwalton.com/js/init.min.js"></script>
+    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=1"></script>
   </head>
   <body class="home">
     <header class="main">
@@ -32,9 +33,9 @@
       <div class="byline">Edward Tufte</div>
     </div>
     <div class="content">
-      <div class="wrapper"><a href="/portfolio" class="heading">Portfolio</a><a href="/portfolio#gifts" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#byu" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span><img data-src="byu-home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#thesis" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Connections</span></span><img data-src="thesis_cards.jpg" alt="" class="lazy front"/></a>
+      <div class="wrapper"><a href="/portfolio" class="heading">Portfolio</a><a href="/portfolio#gifts" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#byu" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span><img data-src="byu-home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#thesis" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Connections</span></span><img data-src="thesis_cards.jpg" alt="" class="lazy front"/></a><a href="/portfolio" class="viewall next"><span class="link visuallyhidden">View all</span></a>
       </div>
-      <div class="wrapper"><a href="/students" class="heading">Student Work</a><a href="/students#poster" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Poster</span></span><img data-src="student/poster1.jpg" alt="" class="lazy front"/></a><a href="/students#album" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Album</span></span><img data-src="student/album1.jpg" alt="" class="lazy front"/></a><a href="/students#photoshop" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3.jpg" alt="" class="lazy front"/></a>
+      <div class="wrapper"><a href="/students" class="heading">Student Work</a><a href="/students#poster" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Poster</span></span><img data-src="student/poster1.jpg" alt="" class="lazy front"/></a><a href="/students#album" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">Album</span></span><img data-src="student/album1.jpg" alt="" class="lazy front"/></a><a href="/students#photoshop" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3.jpg" alt="" class="lazy front"/></a><a href="/students" class="viewall next"><span class="link visuallyhidden">View all</span></a>
       </div>
     </div>
     <footer class="main"></footer>
