--- a/students.html
+++ b/students.html
@@ -9,16 +9,17 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
+    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=4"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
       window.localAssets = false;
+      window.jsVersion   = 1;
     </script>
-    <script src="http://static.nkwalton.com/js/init.min.js"></script>
+    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=1"></script>
   </head>
   <body class="teaching">
     <header class="main">
@@ -35,11 +36,15 @@
         </div>
         <div id="intro-0" class="slide intro last">
           <div class="wrapper">
-            <div class="sizable"><a href="#poster" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Poster</span></span><img data-src="student/poster1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#cd" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">CD Packaging</span></span><img data-src="student/cd8" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#album" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Music Promotion</span></span><img data-src="student/album1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#photoshop" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3" data-ext=".jpg" alt="" class="lazy front"/></a>
+            <div class="sizable">
+              <div class="projectlinks"><a href="#poster" class="projectLink"><span class="projectDesc">
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Poster</span></span><img data-src="student/poster1" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#poster" class="sublink"></a><a href="#poster-1" class="sublink"></a><a href="#poster-2" class="sublink"></a><a href="#poster-3" class="sublink"></a><a href="#poster-4" class="sublink"></a><a href="#poster-5" class="sublink"></a><a href="#poster-6" class="sublink"></a><a href="#poster-7" class="sublink"></a><a href="#poster-8" class="sublink"></a></span></div>
+              <div class="projectlinks"><a href="#cd" class="projectLink"><span class="projectDesc">
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">CD Packaging</span></span><img data-src="student/cd8" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#cd" class="sublink"></a><a href="#cd-1" class="sublink"></a><a href="#cd-2" class="sublink"></a><a href="#cd-3" class="sublink"></a><a href="#cd-4" class="sublink"></a><a href="#cd-5" class="sublink"></a><a href="#cd-6" class="sublink"></a><a href="#cd-7" class="sublink"></a><a href="#cd-8" class="sublink"></a></span></div>
+              <div class="projectlinks"><a href="#album" class="projectLink"><span class="projectDesc">
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Music Promotion</span></span><img data-src="student/album1" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#album" class="sublink"></a><a href="#album-1" class="sublink"></a><a href="#album-2" class="sublink"></a><a href="#album-3" class="sublink"></a><a href="#album-4" class="sublink"></a><a href="#album-5" class="sublink"></a></span></div>
+              <div class="projectlinks"><a href="#photoshop" class="projectLink"><span class="projectDesc">
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#photoshop" class="sublink"></a><a href="#photoshop-1" class="sublink"></a><a href="#photoshop-2" class="sublink"></a><a href="#photoshop-3" class="sublink"></a></span></div>
             </div>
           </div>
         </div>
@@ -65,7 +70,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -85,7 +90,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -105,7 +110,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -125,7 +130,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -145,7 +150,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -165,7 +170,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster7.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -185,7 +190,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -205,7 +210,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster8.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -225,7 +230,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/poster9.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -261,7 +266,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -281,7 +286,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -301,7 +306,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -321,7 +326,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -341,7 +346,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -361,7 +366,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -381,7 +386,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd7.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -401,7 +406,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd8.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -421,7 +426,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/cd9.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -457,7 +462,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -477,7 +482,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -497,7 +502,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -517,7 +522,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -537,7 +542,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -557,7 +562,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/album6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -593,7 +598,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -613,7 +618,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -633,7 +638,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -653,7 +658,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/student/photoshop3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
